--- a/allStarSpotify/app/assets/stylesheets/application.css
+++ b/allStarSpotify/app/assets/stylesheets/application.css
@@ -13,3 +13,43 @@
  *= require_tree .
  *= require_self
  */
+ font-family: 'Montserrat', sans-serif;
+ 
+ html, body {
+  margin: 0;
+  padding: 0;
+}
+
+#navbar-main { 
+ margin-bottom: 0%; 
+ background-color: black;
+
+}
+
+#nav-sidebar {
+  overflow-y: auto;
+  background-color: #000000;
+  opacity: 0.9;
+  padding-top: 5%;
+}
+
+h1 {
+  color: green;
+}
+
+.sidebar { 
+  background-color: blue;
+}
+
+p { 
+  background-color: red; 
+}
+
+body {
+    margin: auto 100%;
+    width: auto;
+    height: 100%;
+    background-image: url("bkgrnd.jpg"); 
+    
+
+}
