--- a/allStarSpotify/app/views/user/playlist.html.erb
+++ b/allStarSpotify/app/views/user/playlist.html.erb
@@ -11,8 +11,6 @@
   <a href=/user/playlist/ class="w3-bar-item w3-button", id = "navbar-item">Your Music</a>
   
 </div>
-
-<!-- Page Content -->
 <div style="margin-left:20%">
 
 <div class="w3-container">
@@ -24,10 +22,13 @@
   </ul>
 </div>
 
-<a href = "../user/playlist"><img src = "http://pre15.deviantart.net/2103/th/pre/i/2014/129/d/8/summer_hype__spotify_playlist__cover_art_by_tylerdotpsd-d7hs83j.png" width= 25%, height= 25% id= summercover class = "album-cover"></a>
-<a href = "../user/playlist"><img src = "https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/2aa71041442859.57a62518bfab2.jpg" width= 300px, height= 290px id = "summerparty" class = "album-cover"></a>
-<a href = "../user/playlist"><img src = "https://contentpl-a.akamaihd.net/images/playlists/image/medium/210793-1435865034.jpg" width= 300px, height= 290px id = "summerpop" class="album-cover"></a>
-
+<div id = "troll">
+<img src = "https://upload.wikimedia.org/wikipedia/en/3/30/Astro_lounge.png" width= 300px, height= 290px id = "album-cover" align ="left" >
+<p class= "album-caption"> Song</p>
+<h1 class= "album-caption"> All Star</h1>
+<p class= "album-caption"> By Smash Mouth</p>
+<p class= "album-caption"> Length: 3:20 </p>
+</div> 
 
 <nav class="navbar navbar-inverse" id="audio-player">
   <div class="container-fluid">
