--- a/allStarSpotify/app/views/layouts/application.html.erb
+++ b/allStarSpotify/app/views/layouts/application.html.erb
@@ -7,6 +7,14 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     
+    <script>
+    document.getElementByClass("album-cover").onclick = function() {restartMusic()};
+    
+    function restartMusic() {
+            document.getElementById("play-button").click();
+    }
+    </script>
+    
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
